<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_marginTop="140dp"
        android:src="@drawable/icon"
        android:contentDescription="@string/content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firebase"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"
        android:textSize="28sp"
        android:textColor="@color/black"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEmail"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button1"
        android:textAllCaps="true"
        app:backgroundTint="@null"
        app:iconTint="@color/black"
        app:icon="@drawable/arroba"
        app:iconSize="24dp"
        android:textSize="17sp"
        android:layout_gravity="center"
        android:text="@string/login_with_email"
        android:textColor="@color/black"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="true"
        app:iconSize="24dp"
        android:background="@drawable/button2"
        app:iconTint="@color/black"
        android:layout_gravity="center"
        android:textSize="17sp"
        app:backgroundTint="@null"
        app:icon="@drawable/phone"
        android:text="@string/login_with_phone_number"
        android:textColor="@color/black"/>

</LinearLayout>