<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="LabelFor"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WithPhoneNumber">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:text="@string/phone_number"/>
    <EditText
        android:id="@+id/edtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:padding="10dp"
        android:inputType="phone"
        android:importantForAutofill="no"
     />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetOTP"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="true"
        android:background="@drawable/button2"
        android:layout_gravity="center"
        android:textSize="17sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        android:text="@string/get_otp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:paddingBottom="8dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="12dp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:text="@string/otp"/>
    <EditText
        android:id="@+id/edtOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="10dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button2"
        android:layout_gravity="center"
        android:textSize="17sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:backgroundTint="@null"
        android:text="@string/login"
        android:textColor="@color/black"/>
</LinearLayout>