<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="LabelFor"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpWithEmail">
    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="37dp"
        android:src="@drawable/arrow"
        android:contentDescription="@string/sign_up"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dang_ky"
        android:textAlignment="center"
        android:layout_margin="50dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/username"/>
    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="true"
        android:background="@drawable/button2"
        android:layout_gravity="center"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:backgroundTint="@null"
        android:text="@string/sign_up"
        android:textColor="@color/black"/>
</LinearLayout>