<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    tools:ignore="LabelFor,HardcodedText"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_title"
        android:textStyle="bold"
        android:textSize="22sp"

        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"/>
    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:padding="10dp"
        android:hint="Nhập tên"
        android:inputType="text"
        android:importantForAutofill="no"
    />
    <EditText
        android:id="@+id/edtState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:padding="10dp"
        android:hint="Nhập bang"
        android:inputType="text"
        android:importantForAutofill="no"
        />
    <EditText
        android:id="@+id/edtCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:padding="10dp"
        android:hint="Nhập đất nước"
        android:inputType="text"
        android:importantForAutofill="no"
        />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:checkedButton="@id/radioNotCapital"
        android:layout_marginEnd="16dp"
        >
        <RadioButton
            android:id="@+id/radioCapital"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/capital" />
        <RadioButton
            android:id="@+id/radioNotCapital"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/not_capital" />
    </RadioGroup>
    <EditText
        android:id="@+id/edtPopulation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:padding="10dp"
        android:hint="Nhập Dân Số"
        android:inputType="number"
        android:importantForAutofill="no"
        />
    <EditText
        android:id="@+id/edtRegions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:padding="10dp"
        android:hint="Nhập Vùng"
        android:inputType="text"
        android:importantForAutofill="no"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdd"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="true"
        android:background="@drawable/button2"
        android:layout_gravity="center"
        android:textSize="17sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        android:text="@string/add"
        android:textColor="@color/black"/>


</LinearLayout>